@@ -6,8 +6,11 @@ ChangeLog
 
 GIT HEAD
 
-- Per instance micro-tuning implementation. (EXPERIMENTAL)
-- New DCF and LFO Enabled parameters. (EXPERIMENTAL)
+- Per instance custom tuning (micro-tonal) option has
+  been added to the previously existing global settings
+  (cf. Help > Configure... > Tuning > Global, Instance).
+  (EXPERIMENTAL)
+~- New DCF and LFO Enabled parameters. (EXPERIMENTAL)
 - Configure updated to check for qtchooser availability.
 
 
